log
Thu 25 Apr 2024 12:23:07 AM UTC: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|6
total_score: 10/70
b5db796
Thu 25 Apr 2024 12:28:38 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
1278acc
Thu 25 Apr 2024 12:28:45 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
336c327
Thu 25 Apr 2024 12:37:48 AM UTC: 
 hashmap.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:53:67: error: implicit declaration of function ‘is_eqaul’; did you mean ‘is_equal’? [-Werror=implicit-function-declaration]
   53 |         if(map->buckets[i]!=NULL && map->buckets[i]->key!=NULL && is_eqaul(map->buckets[i]->key,key))
      |                                                                   ^~~~~~~~
      |                                                                   is_equal
cc1: all warnings being treated as errors
Compilation failed
025f9df
Thu 25 Apr 2024 12:38:07 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
2107d07
Thu 25 Apr 2024 12:39:46 AM UTC: 
 hashmap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
test.c: In function ‘insertMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3e2ca4a
Thu 25 Apr 2024 12:40:19 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
test.c: In function ‘insertMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6e44d8a
Thu 25 Apr 2024 12:47:00 AM UTC: 
 hashmap.c | 13 +------------
 1 file changed, 1 insertion(+), 12 deletions(-)
 tests:  1|6
total_score: 10/70
ce39153
Thu 25 Apr 2024 12:51:10 AM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c:66:11: error: redefinition of ‘createMap’
   66 | HashMap * createMap(long capacity) {
      |           ^~~~~~~~~
hashmap.c:40:11: note: previous definition of ‘createMap’ with type ‘HashMap *(long int)’ {aka ‘struct HashMap *(long int)’}
   40 | HashMap * createMap(long capacity)
      |           ^~~~~~~~~
Compilation failed
bd7f839
Thu 25 Apr 2024 12:51:59 AM UTC: 
 hashmap.c | 18 ++++++++----------
 1 file changed, 8 insertions(+), 10 deletions(-)
 tests:  2|5
total_score: 20/70
1088774
Thu 25 Apr 2024 12:52:17 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|5
total_score: 20/70
1778b2e
Thu 25 Apr 2024 12:55:50 AM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
db858c5
Thu 25 Apr 2024 01:08:22 AM UTC: 
 hashmap.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:86:1: error: control reaches end of non-void function [-Werror=return-type]
   86 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0a0da45
Thu 25 Apr 2024 01:09:14 AM UTC: 
 hashmap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  3|5
total_score: 20/70
31827b3
Thu 25 Apr 2024 01:09:39 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|5
total_score: 20/70
9a87975
Thu 25 Apr 2024 01:09:46 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 20/70
283ecd6
Thu 25 Apr 2024 03:09:27 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 20/70
ae2ff0f
Thu 25 Apr 2024 03:09:50 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
ce77582
Thu 25 Apr 2024 03:10:03 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|5
total_score: 20/70
fe23729
Thu 25 Apr 2024 03:17:21 AM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  4|4
total_score: 30/70
b189017
Thu 25 Apr 2024 03:18:21 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:96:1: error: control reaches end of non-void function [-Werror=return-type]
   96 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2f01df5
Thu 25 Apr 2024 03:18:40 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|4
total_score: 30/70
c2fc5ef
Thu 25 Apr 2024 03:25:40 AM UTC: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
cf56532
Thu 25 Apr 2024 03:28:07 AM UTC: 
 hashmap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  0|0
25592e5
Thu 25 Apr 2024 03:28:25 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
84c4198
Thu 25 Apr 2024 03:28:48 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
e3c2be9
Thu 25 Apr 2024 03:30:48 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0bf6a91
Thu 25 Apr 2024 03:31:52 AM UTC: 
 hashmap.c | 14 +-------------
 1 file changed, 1 insertion(+), 13 deletions(-)
 tests:  0|0
17b992f
Thu 25 Apr 2024 03:33:06 AM UTC: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  4|4
total_score: 30/70
0f2585c
Thu 25 Apr 2024 03:34:01 AM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  4|4
total_score: 30/70
51c4f50
Thu 25 Apr 2024 03:35:14 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|4
total_score: 30/70
438b850
Thu 25 Apr 2024 03:40:39 AM UTC: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  4|4
total_score: 30/70
e2f13e9
Thu 25 Apr 2024 09:15:25 PM UTC: 
 hashmap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  0|0
242e044
Thu 25 Apr 2024 09:16:12 PM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  6|4
total_score: 30/70
2298d6a
Thu 25 Apr 2024 09:17:19 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  7|3
total_score: 40/70
315d599
Thu 25 Apr 2024 09:17:46 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
de4d52f
Thu 25 Apr 2024 09:17:53 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|3
total_score: 40/70
7636eab
Thu 25 Apr 2024 09:19:23 PM UTC: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:113:1: error: control reaches end of non-void function [-Werror=return-type]
  113 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5270883
Thu 25 Apr 2024 09:19:58 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  9|2
total_score: 50/70
d988c68
Thu 25 Apr 2024 09:22:48 PM UTC: 
 hashmap.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  0|0
ccad700
Thu 25 Apr 2024 09:24:37 PM UTC: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:90:7: error: unused variable ‘pos’ [-Werror=unused-variable]
   90 |   int pos = hash(key,map->capacity);
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
acb3768
